--- a/themes/passepartout/views/articles/_comment.html.erb
+++ b/themes/passepartout/views/articles/_comment.html.erb
@@ -2,7 +2,7 @@
   <%= admin_tools_for comment %>
   <p>
   <a name="comment-<%= comment.id %>"></a>
-  <%= gravatar_tag(comment.email) if this_blog.use_gravatar and comment.email %>
+  <%= avatar_tag(:email => comment.email, :url => comment.url) %>
   <cite><strong><%= link_to_unless(comment.url.blank?, h(comment.author), comment.url) %></strong> </cite> <%= _("said")%> <%= distance_of_time_in_words comment.article.published_at, comment.created_at %> later:
   </p>
   <div>
