--- a/themes/passepartout/views/articles/read.html.erb
+++ b/themes/passepartout/views/articles/read.html.erb
@@ -18,10 +18,7 @@
 <div class="post"<%= onhover_show_admin_tools(:article) %>>
   <%= link_to("edit", { :controller => "admin/content", :action => "edit", :id => @article.id },
         :class => "admintools", :style => "display: none", :id => "admin_article") %>
-  <h2><%=h @article.title %></h2>
-  <p class="auth"><%= _("Posted by")%> <%= author_link(@article) %>
-  <%= js_distance_of_time_in_words_to_now @article.published_at.utc %></p>
-  <%= html(@article) %>
+  <%= render @article %>
 </div>
 <p class="meta">
   <%= article_links @article %>
@@ -38,13 +35,7 @@
       <small><a href="#respond"><%= _("Leave a response")%></a></small>
     </p>
   <% end -%>
-  <ol class="comment-list" id="commentList">
-  <% if @article.published_comments.blank? %>
-    <li id="dummy_comment" style="display: none"></li>
-  <% else %>
-    <%= render(:partial => "comment", :collection => @article.published_comments) %>
-  <% end %>
-  </ol>
+  <%= render "articles/comment_list" %>
 <% end -%>
 
 <% if @article.allow_pings? or @article.published_trackbacks.size > 0 -%>
@@ -55,12 +46,12 @@
     <h4 class="blueblk"><%= _("Trackbacks")%></h4>
   <% end -%>
   <%= content_tag(:ol,
-        render(:partial => "trackback", :collection => @article.published_trackbacks),
+        render("trackback", :collection => @article.published_trackbacks),
         :id => 'trackbackList', :class => 'trackback-list') unless @article.published_trackbacks.blank? %>
 <% end -%>
 
 <% unless @article.comments_closed? -%>
-  <%= render :partial => 'comment_box' %>
+  <%= render 'comment_box' %>
 <% else -%>
   <p><%= _("Comments are disabled")%></p>
 <% end -%>
