--- a/themes/passepartout/views/comments/_comment.html.erb
+++ b/themes/passepartout/views/comments/_comment.html.erb
@@ -3,7 +3,7 @@
   <p>
   <a name="comment-<%= comment.id %>"></a>
   <%= avatar_tag(:email => comment.email, :url => comment.url) %>
-  <cite><strong><%= link_to_unless(comment.url.blank?, h(comment.author), comment.url) %></strong> </cite> <%= _("said")%> <%= distance_of_time_in_words comment.article.published_at, comment.created_at %> later:
+  <cite><strong><%= link_to_unless(comment.url.blank?, h(comment.author), comment.url) %></strong> </cite> <%= _("said")%> <%= display_date_and_time comment.created_at %> later:
   </p>
   <div>
   <%= comment.generate_html(:body) %>
@@ -12,3 +12,4 @@
     <div class="spamwarning"><%= _("This comment has been flagged for moderator approval.  It won't appear on this blog until the author approves it")%>.</div>
   <% end -%>
 </li>
+
