Enable web sign-in

--- a/themes/passepartout/views/articles/_frontbar.html.erb
+++ b/themes/passepartout/views/articles/_frontbar.html.erb
@@ -18,3 +18,9 @@
     href="http://www.xs4all.nl/~mvz/metaphoor/">metaphoor</a></li>
   <li><a href="/blog/">blog</a></li>
 </ul>
+
+<h3>Elsewhere</h3>
+<ul class="navigation">
+  <li><a rel="me" href="https://twitter.com/mvz">@mvz on Twitter</a></li>
+  <li><a rel="me" href="https://github.com/mvz">mvz on GitHub</a></li>
+</ul>
